moved to collection since toList is to high in the API